Refactor code and add new dependencies

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@wordpress/block-editor": "^12.14.0",
 		"@wordpress/data": "^9.16.0",
 		"@wordpress/edit-post": "^7.23.0",
+		"@wordpress/hooks": "^3.46.0",
 		"@wordpress/i18n": "^4.2.4",
 		"@wordpress/plugins": "^6.14.0",
 		"@wordpress/rich-text": "^6.23.0"
